[package]
name = "github_webhook"
version = "0.1.0"
edition = "2021"


[dependencies]
salvo = { version = "0.74.3"}
tokio = { version = "1.36", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
async-process = "2.1"

[dev-dependencies]
salvo = { version = "0.74.3", features = ["test"] }
